# conntrack-ebpf

./: .gitignore  .gitmodules  README.md  libbpf.patch
src/: .clang-format  CMakeLists.txt  Makefile  conntrack.bpf.c  conntrack.c  conntrack_bpf_log.h  conntrack_common.h  conntrack_cuckoo.c  conntrack_if_helper.c  conntrack_if_helper.h  conntrack_maps.h  conntrack_parser.h  conntrack_structs.h  conntrack_v2.c
src/ebpf/: cilium_builtin.h  cilium_compiler.h  conntrack.bpf.c  conntrack_bpf_log.h  conntrack_common.h  conntrack_cuckoo.bpf.c  conntrack_helpers.h  conntrack_helpers_old.h  conntrack_maps.h  conntrack_maps_v2.h  conntrack_parser.h  conntrack_structs.h  conntrack_v2.bpf.c
tools/: delete-rss-rules.sh  disable-ht.sh  gen_vmlinux_h.sh  helper_functions.sh  install-dependencies.sh  set-mellanox-ofed.sh  set_cpu_frequency.sh  set_rss.sh  set_rss_mac.sh
tools/python_scripts/: .gitignore  config.yaml  config_test.yaml  generate_pcap_conntrack.py  generate_pcap_conntrack_v2.py  logger.py  requirements.txt  run-test-different-flows.sh  run_test_different_cores.py  scapy_pcap.py
tools/python_scripts/data/: results_10000flows_2pkts_v1_drop.csv  results_10000flows_2pkts_v1ns_drop.csv  results_10000flows_v1_redir.csv  results_10000flows_v1ns_redir.csv  results_10000flows_v2_redir.csv  results_100flows_v1_drop.csv  results_100flows_v1_redir.csv  results_100flows_v1ns_redir.csv  results_100flows_v2_redir.csv
tools/python_scripts/data/data-100gbps-r650/perf/: results_10000f_1pkt_v1_perf_drop.csv  results_10000f_1pkt_v1_perf_drop.perf.yaml  results_10000f_v1ns_perf_drop.csv  results_10000f_v1ns_perf_drop.perf.yaml  results_10000f_v2_perf_drop.csv  results_10000f_v2_perf_drop.perf.yaml  results_100f_v1_drop.csv  results_100f_v1_drop.perf.yaml  results_100f_v1_redir.csv  results_100f_v1_redir.perf.yaml  results_100f_v1ns_drop.csv  results_100f_v1ns_drop.perf.yaml  results_100f_v1ns_redir.csv  results_100f_v1ns_redir.perf.yaml  results_100f_v2_drop.csv  results_100f_v2_drop.perf.yaml  results_100f_v2_redir.csv  results_100f_v2_redir.perf.yaml
tools/python_scripts/data/data-100gbps-r650/throughput/: results_10000f_1pkt_v1_drop.csv  results_10000f_1pkt_v1ns_drop.csv  results_10000f_1pkt_v2_drop.csv  results_10000f_v1_drop.csv  results_10000f_v1ns_drop.csv  results_10000f_v2_drop.csv  results_100f_v1_drop.csv  results_100f_v1_redir.csv  results_100f_v1ns_drop.csv  results_100f_v1ns_redir.csv  results_100f_v2_drop.csv  results_100f_v2_redir.csv
tools/python_scripts/data/data-40gbps/perf/: results_10000f_2pkts_v1_redir.csv  results_10000f_2pkts_v1ns_redir.csv  results_10000f_2pkts_v2_drop.perf.yaml  results_10000f_v1_drop.csv  results_10000f_v1_drop.perf.yaml  results_10000f_v1_redir.csv  results_10000f_v1ns_redir.perf.yaml  results_10000f_v2_drop.csv  results_100f_v1_drop.csv  results_100f_v1_redir.csv  results_100f_v1_redir.perf.yaml  results_100f_v1ns_drop.csv  results_100f_v1ns_drop.perf.yaml  results_100f_v1ns_redir.csv
tools/python_scripts/data/data-40gbps/throughput/: results_10000flows_2pkts_v1ns_redir.csv  results_10000flows_2pkts_v2_drop.csv  results_10000flows_v1_drop.csv  results_10000flows_v2_drop.csv  results_100flows_v1ns_drop.csv
tools/python_scripts/data/perf/: results_10000f_2pkts_v1_drop.csv  results_10000f_2pkts_v1_drop.perf.yaml  results_10000f_2pkts_v1_redir.perf.yaml  results_10000f_2pkts_v1ns_drop.csv  results_10000f_2pkts_v1ns_drop.perf.yaml  results_10000f_2pkts_v1ns_redir.perf.yaml  results_10000f_2pkts_v2_drop.csv  results_10000f_2pkts_v2_redir.csv  results_10000f_2pkts_v2_redir.perf.yaml  results_10000f_v1_redir.perf.yaml  results_10000f_v1ns_drop.csv  results_10000f_v1ns_drop.perf.yaml  results_10000f_v1ns_redir.csv  results_10000f_v2_drop.perf.yaml  results_10000f_v2_redir.csv  results_10000f_v2_redir.perf.yaml  results_100f_v1_drop.perf.yaml  results_100f_v1ns_redir.perf.yaml  results_100f_v2_drop.csv  results_100f_v2_drop.perf.yaml  results_100f_v2_redir.csv  results_100f_v2_redir.perf.yaml
tools/python_scripts/data/perf/bpftool/: results_10000f_2pkts_v1_drop.csv  results_10000f_2pkts_v1_redir.csv  results_10000f_2pkts_v1ns_drop.csv  results_10000f_2pkts_v1ns_redir.csv  results_10000f_v1_drop.csv  results_10000f_v1_redir.csv  results_10000f_v1ns_drop.csv  results_10000f_v1ns_redir.csv  results_100f_v1_drop.csv  results_100f_v1_redir.csv  results_100f_v1ns_drop.csv  results_100f_v1ns_redir.csv
tools/python_scripts/data/throughput/: results_10000flows_2pkts_v1_redir.csv  results_10000flows_2pkts_v2_redir.csv  results_10000flows_v1ns_drop.csv  results_100flows_v1_drop.csv  results_100flows_v2_drop.csv
tools/python_scripts/pcap_generators/: generate-pcaps.sh  generate_pcap_conntrack.py  generate_pcap_conntrack_v1.py  generate_pcap_conntrack_v2.py  generate_pcap_conntrack_v2_pcap.py  stream_helpers.py
tools/python_scripts/plots/: plot_conntrack_10000f_2pkts_results_drop.py  plot_conntrack_10000f_2pkts_results_redir.py  plot_conntrack_10000f_results_drop.py  plot_conntrack_10000f_results_redir.py  plot_conntrack_100f_results_drop.py  plot_conntrack_100f_results_redir.py  plot_conntrack_perf_results_drop.py  plot_conntrack_perf_results_redir.py  plot_conntrack_results_drop.py  plot_conntrack_results_redir.py  plot_conntrack_tput_results_drop.py  plot_conntrack_tput_results_redir.py
tools/python_scripts/trex/: send_pcap_local_trex.py  send_pcap_remote_trex.py  send_pcap_trex.py
